# bevy_skybox_cubemap

./: Cargo.toml  README.md  README.tpl  labeled_skybox.xcf
.github/workflows/: rust.yml
examples/: simple.rs
src/: lib.rs  skybox.frag  skybox.vert
