[package]
name = "bevy_skybox_cubemap"
version = "0.2.0"
edition = "2021"
authors = ["Zachary Stewart <zstewart@google.com>"]
description = "Cubemap-based Skyboxes for Bevy Engine."
homepage = "https://github.com/google/bevy_skybox_cubemap"
repository = "https://github.com/google/bevy_skybox_cubemap"
license = "Apache-2.0"
keywords = ["bevy", "skybox", "gamedev", "graphics"]
categories = ["game-engines", "graphics"]
exclude = [
    "docimgs/",
    "*.xcf",
    ".github/",
]

[badges]
github = { repository = "google/bevy_skybox_cubemap", workflow = "Rust" }
maintenance = { status = "passively-maintained" }

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = ["render", "bevy_asset"]

[dev-dependencies]
bevy = "0.8.1"
